<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitFragment">

    <ImageView
        android:id="@+id/ivCir1"
        android:layout_width="128dp"
        android:layout_height="152dp"
        android:src="@drawable/circle"
        android:translationX="-35dp"
        android:translationY="-10dp" />

    <ImageView
        android:id="@+id/ivCir2"
        android:layout_width="160dp"
        android:layout_height="152dp"
        android:src="@drawable/circle"
        android:translationX="-5dp"
        android:translationY="-55dp" />

    <ImageView
        android:id="@+id/ivDogWalk"
        android:layout_width="wrap_content"
        android:layout_height="521dp"
        android:src="@drawable/dog_walking" />

    <TextView
        android:id="@+id/tvTtle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:translationY="450dp" />

    <TextView
        android:id="@+id/tvPresent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/lorem"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:lineSpacingMultiplier="1.3"
        android:translationY="500dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/start"
        android:textStyle="bold"
        android:background="@drawable/button"
        android:translationY="600dp" />
</FrameLayout>